Bug 265301 - [GStreamer][WebCodecs] New tests http/wpt/webcodecs/h264-encoder-default-config trigger critical warnings
Summary: [GStreamer][WebCodecs] New tests http/wpt/webcodecs/h264-encoder-default-conf...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-24 01:12 PST by Philippe Normand
Modified: 2023-11-24 07:48 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2023-11-24 01:12:36 PST
(WPEWebProcess:130383): GLib-GObject-CRITICAL **: 23:49:08.366: value "0" of type 'guint' is invalid or out of range for property 'bitrate' of type 'guint'
Comment 1 Philippe Normand 2023-11-24 02:00:25 PST
Pull request: https://github.com/WebKit/WebKit/pull/20863
Comment 2 EWS 2023-11-24 07:47:43 PST
Committed 271099@main (a20dfce04b5f): <https://commits.webkit.org/271099@main>

Reviewed commits have been landed. Closing PR #20863 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-11-24 07:48:18 PST
<rdar://problem/118773489>