[GStreamer][WebCodecs] New tests http/wpt/webcodecs/h264-encoder-default-config trigger critical warnings https://bugs.webkit.org/show_bug.cgi?id=265301

Reviewed by Xabier Rodriguez-Calvar.

There was a confusion in kbps/bps conversion, 1 kbps is 1000 bps, not 1024 bps... We also now check
the bitrate is positive and non-null before setting it on the encoder.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::GStreamerInternalVideoEncoder::initialize):
* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
* Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.cpp:
(WebCore::RealtimeOutgoingVideoSourceGStreamer::updateStats):
(WebCore::RealtimeOutgoingVideoSourceGStreamer::setParameters):
(WebCore::RealtimeOutgoingVideoSourceGStreamer::fillEncodingParameters):

Canonical link: https://commits.webkit.org/271099@main